# ocre-sdk

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ocre.cmake  ocre_api.h
.github/workflows/: build.yml
board_specific/arduino_portenta_h7/blinky-h7/: CMakeLists.txt  build.yaml  main.c
board_specific/b_u585i_iot02a/blinky-button/: CMakeLists.txt  build.yaml  main.c
board_specific/b_u585i_iot02a/blinky-u585/: CMakeLists.txt  build.yaml  main.c
board_specific/b_u585i_iot02a/blinky-xmas/: CMakeLists.txt  build.yaml  main.c
board_specific/b_u585i_iot02a/modbus-server/: CMakeLists.txt  README.md  build.yaml  main.c  mongoose_config.h  run.sh
board_specific/b_u585i_iot02a/sensor/: CMakeLists.txt  build.yaml  main.c
board_specific/b_u585i_iot02a/sensor-IMU/: CMakeLists.txt  build.yaml  main.c
generic/big-sample/: CMakeLists.txt  build.yaml  main.c
generic/blinky/: CMakeLists.txt  build.yaml  main.c
generic/blinky-board-generic/: CMakeLists.txt  build.yaml  main.c
generic/echo-server/: CMakeLists.txt  build.yaml
generic/edge-impulse/data-container/data/training/: info.labels  (+48 more)
generic/edge-impulse/motion-classifier/: .gitignore  CMakeLists.txt  README.md  aot.yaml  build.sh  build.yaml  load.sh  push_data.sh  run.sh
generic/edge-impulse/motion-classifier/container-assets/: aot.yaml  build.yaml  gen_embedded_assets.py  main.c
generic/edge-impulse/motion-classifier/container-classifier/: build.yaml  main.c
generic/edge-impulse/motion-classifier/container-data/: aot.yaml  build.yaml  ei_cbor_decoder.c  ei_cbor_decoder.h  main.c  test.c
generic/edge-impulse/motion-classifier/data/: README.txt  info.labels  updown-w1.txt
generic/edge-impulse/motion-classifier/data/testing/: anomaly.shake.1.cbor.1q53q9ph.ingestion-54698b698b-jtpt9.cbor  idle.1.cbor.1q53q9pg.ingestion-54698b698b-jtpt9.cbor  idle.2.cbor.1q53q9pg.ingestion-54698b698b-wjcsm.cbor  idle.4.cbor.1q53q9pj.ingestion-54698b698b-wjcsm.cbor  info.labels  snake.1.cbor.1q53q9po.ingestion-54698b698b-prmv2.cbor  updown.2.cbor.1q53q9pq.ingestion-54698b698b-prmv2.cbor  wave.1.cbor.1q53q9pr.ingestion-54698b698b-jtpt9.cbor  wave.4.cbor.1q53q9pq.ingestion-54698b698b-wjcsm.cbor
generic/edge-impulse/motion-classifier/data/training/: idle.1.cbor.1q53ose9.ingestion-54698b698b-wjcsm.cbor  idle.10.cbor.1q53os8k.ingestion-54698b698b-jtpt9.cbor  idle.12.cbor.1q53osck.ingestion-54698b698b-jtpt9.cbor  idle.13.cbor.1q53osd5.ingestion-54698b698b-prmv2.cbor  idle.14.cbor.1q53os6p.ingestion-54698b698b-jtpt9.cbor  idle.2.cbor.1q53osc0.ingestion-54698b698b-jtpt9.cbor  idle.3.cbor.1q53osci.ingestion-54698b698b-jtpt9.cbor  snake.1.cbor.1q53os84.ingestion-54698b698b-wjcsm.cbor  snake.15.cbor.1q53os7r.ingestion-54698b698b-wjcsm.cbor  snake.2.cbor.1q53oscg.ingestion-54698b698b-jtpt9.cbor  snake.3.cbor.1q53os95.ingestion-54698b698b-prmv2.cbor  snake.7.cbor.1q53oscs.ingestion-54698b698b-jtpt9.cbor  updown.12.cbor.1q53oscq.ingestion-54698b698b-wjcsm.cbor  updown.16.cbor.1q53os7n.ingestion-54698b698b-jtpt9.cbor  updown.18.cbor.1q53os77.ingestion-54698b698b-prmv2.cbor  updown.2.cbor.1q53oscv.ingestion-54698b698b-wjcsm.cbor  updown.4.cbor.1q53osc8.ingestion-54698b698b-jtpt9.cbor  updown.7.cbor.1q53oscf.ingestion-54698b698b-jtpt9.cbor  updown.9.cbor.1q53os98.ingestion-54698b698b-jtpt9.cbor  wave.10.cbor.1q53os6f.ingestion-54698b698b-prmv2.cbor  wave.11.cbor.1q53os8q.ingestion-54698b698b-prmv2.cbor  wave.12.cbor.1q53osc4.ingestion-54698b698b-wjcsm.cbor  wave.13.cbor.1q53oscn.ingestion-54698b698b-jtpt9.cbor  wave.15.cbor.1q53oscl.ingestion-54698b698b-jtpt9.cbor  wave.17.cbor.1q53osb9.ingestion-54698b698b-prmv2.cbor  wave.20.cbor.1q53os8j.ingestion-54698b698b-jtpt9.cbor  wave.24.cbor.1q53osau.ingestion-54698b698b-prmv2.cbor  wave.25.cbor.1q53osbh.ingestion-54698b698b-prmv2.cbor  wave.27.cbor.1q53os7l.ingestion-54698b698b-prmv2.cbor  wave.29.cbor.1q53osco.ingestion-54698b698b-wjcsm.cbor  wave.30.cbor.1q53os9g.ingestion-54698b698b-jtpt9.cbor  wave.31.cbor.1q53oscr.ingestion-54698b698b-wjcsm.cbor  wave.7.cbor.1q53os9v.ingestion-54698b698b-jtpt9.cbor  wave.8.cbor.1q53os78.ingestion-54698b698b-prmv2.cbor
generic/edge-impulse/motion-classifier/model-parameters/: model_metadata.h  model_variables.h
generic/edge-impulse/motion-classifier/source/: main.c
generic/edge-impulse/motion-classifier/tflite-model/: tflite_learn_48.h  tflite_learn_723317_48.h
generic/filesystem/: CMakeLists.txt  build.sh  build.yaml  main.c  run.sh
generic/filesystem-full/: CMakeLists.txt  build.yaml  main.c  run.sh
generic/hello-world/: CMakeLists.txt  build.yaml  main.c
generic/log_mirror_forwarder/: CMakeLists.txt  README.md  build.sh  build.yaml  main.c  run.sh
generic/log_mirror_forwarder/fs/web/: index.html
generic/messaging/multipublisher-subscriber/publisher_inside/: CMakeLists.txt  build.yaml  main.c
generic/messaging/multipublisher-subscriber/publisher_outside/: CMakeLists.txt  build.yaml  main.c
generic/messaging/multipublisher-subscriber/subscriber_temp/: CMakeLists.txt  build.yaml  main.c
generic/messaging/publisher/: CMakeLists.txt  build.yaml  main.c
generic/messaging/subscriber/: CMakeLists.txt  build.yaml  main.c
generic/modbus-client/: CMakeLists.txt  README.md  build.yaml  main.c  mongoose.c
generic/sensor-rng/: CMakeLists.txt  build.yaml  main.c
generic/shared-filesystem/shared-filesystem-reader/: CMakeLists.txt  build.yaml  main.c  run.sh
generic/shared-filesystem/shared-filesystem-writer/: CMakeLists.txt  build.yaml  main.c  run.sh
generic/webserver/: CMakeLists.txt  build.yaml  main.c  mongoose.c  mongoose_config.h  run.sh
generic/webserver-complex/: CMakeLists.txt  build.yaml  main.c  run.sh
ocre-api/: ocre_api.c
ocre-sdk/: CMakeLists.txt  ocre_api.c  ocre_api.h
scripts/: wasm32-wasi-pthread.cmake
testing/: CMakeLists.txt  print_args.c  pthread.c  return0.c  sleep_5_return_0.c
testing/cat/: CMakeLists.txt  main.c
testing/print_args/: CMakeLists.txt
testing/pthread/: CMakeLists.txt
testing/return0/: CMakeLists.txt
testing/return1/: CMakeLists.txt  main.c
testing/sleep5_return0/: CMakeLists.txt
(+8 files in other folders)
